force-app/main/default/objects/citizenship__c/citizenship__c.object-meta.xml
<CustomObject>
    <label>citizenship</label>
    <nameField>
        <displayFormat>CSID-{00000000}</displayFormat>
        <label>citizhenship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>citizenships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>