force-app/main/default/objects/citizenship__c/fields/basic__c.field-meta.xml
<CustomField>
    <fullName>basic__c</fullName>
    <label>basic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>by barth</fullName>
            </value>
            <value>
                <fullName>by education</fullName>
            </value>
            <value>
                <fullName>by religon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>