force-app/main/default/objects/citizenship__c/fields/country__c.field-meta.xml
<CustomField>
    <fullName>country__c</fullName>
    <label>country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>country</valueSetName>
    </valueSet>
</CustomField>