force-app/main/default/objects/citizenship__c/fields/Dual_citizenship__c.field-meta.xml
<CustomField>
    <fullName>Dual_citizenship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual citizenship</label>
    <type>Checkbox</type>
</CustomField>