force-app/main/default/objects/citizenship__c/fields/nationality__c.field-meta.xml
<CustomField>
    <fullName>nationality__c</fullName>
    <label>nationality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>country</valueSetName>
    </valueSet>
</CustomField>